--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "antd": "^4.23.2",
     "axios": "^1.2.0",
     "braintree-web-drop-in-react": "^1.2.1",
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
     "moment": "^2.29.4",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
