--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "Kenneth",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
+    "braintree": "^3.12.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
